# django-mock-mailman

./: README.md  pyproject.toml
src/: db.sqlite3  manage.py
src/mock_mailman/: asgi.py  settings.py  urls.py  wsgi.py
src/send_email/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/send_email/migrations/: 0001_initial.py  0002_email.py
src/templates/: base.html  email_detail.html  email_form.html  email_list.html  home.html  mailing_list_members.html  navbar.html  subscribe_form.html  unsubscribe_form.html
