[project]
name = "mock_mailman"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "bvv-1", email = "fhinnoigsr@gmail.com" }
]
dependencies = [
    "Django>=5.0.4",
    "aiosmtpd>=1.4.5",
    "django-bootstrap5>=24.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
hello = "mock_mailman:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mock_mailman"]
